stack-deploy/google/redis-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:3.2-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 6379
              name: redis
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: redis
  labels:
    app: redis
spec:
  ports:
    - port: 6379
      name: redis
  selector:
    app: redis
