stack-deploy/google/stack-backend-service-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: stack-backend-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stack-backend-service
  template:
    metadata:
      labels:
        app: stack-backend-service
    spec:
      containers:
        - name: stack-backend-service
          image: srilakshmi29/stack-backend-service:prod2c
          volumeMounts:
            - mountPath: /stackCred/stackCredential
              name: stack-backend-credential-configmap
              subPath: stackCredential
            - mountPath: /stackCred/stackCode
              name: stack-backend-code-configmap
              subPath: stackCode
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      volumes:
        - name: stack-backend-credential-configmap
          configMap:
            name: stack-backend-credential-configmap
        - name: stack-backend-code-configmap
          configMap:
            name: stack-backend-code-configmap
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
 name: stack-backend-service
 labels:
   app: stack-backend-service
spec:
 ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
 selector:
  app: stack-backend-service
