stack-deploy/google/stack-task-service-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: stack-task-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stack-task-service
  template:
    metadata:
      labels:
        app: stack-task-service
    spec:
      containers:
        - name: stack-task-service
          image: srilakshmi29/stack-task-service:prod4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
 name: stack-task-service
 labels:
   app: stack-task-service
spec:
 ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: http
 selector:
  app: stack-task-service
