stack-deploy/google/stack-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: stack-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - www.stackitdown.com
    secretName: stacksecret
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /static/*
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /stackHome1M.jpg
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /stackHome2M.jpg
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /stackHome1XS.jpg
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /stackHome2XS.jpg
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /stackBkgM.jpg
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /*.ico
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /stackitdown
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /health
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /stack
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /user/me
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /swagger-ui.html
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /swagger-resources
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /v2/api-docs
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /webjars
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /oauth2/authorize
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /oauth2/redirect
            backend:
              serviceName: stack-task-ui
              servicePort: 80
          - path: /login/oauth2/code/google
            backend:
              serviceName: stack-task-service
              servicePort: 8080
          - path: /email
            backend:
              serviceName: stack-backend-service
              servicePort: 8080
